# gsr-clip

./: .gitignore  PKGBUILD  PLAN.md  README.md  pyproject.toml
gsr_clip/: __init__.py  audio_devices.py  cli.py  config.py  daemon.py  focus.py  gamepad.py  gsr_process.py  gui.py  highlights.py  hotkeys.py  steam_gate.py  storage.py  trim.py  viewer.py  watcher.py
gsr_clip/web/: app.js  index.html  style.css
packaging/: config.example.toml  gsr-clip.desktop  gsr-clip.service  gsr-clip.user.service  install.sh
scripts/: on-save.sh
