[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gsr-clip"
version = "0.1.0"
description = "Standalone clip + session recorder built on gpu-screen-recorder (replay buffer, auto-started Steam-gated sessions, highlight bookmarks)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "dazed" }]
dependencies = [
    "evdev>=1.6",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]

[project.scripts]
gsr-clip = "gsr_clip.cli:main"
gsr-clipd = "gsr_clip.daemon:main"

[project.gui-scripts]
gsr-clip-gui = "gsr_clip.gui:main"

[tool.setuptools]
packages = ["gsr_clip"]

[tool.setuptools.package-data]
gsr_clip = ["web/*.html", "web/*.css", "web/*.js"]
